# TimeElectronics5025

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/te5025/: __init__.py  driver.py
tests/: dc_voltage_test.py
